# ColiVara-Eval

./: .gitattributes  .gitignore  LICENSE  collection_manager.py  evaluate.py  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  upsert.py
data/: docvqa_test_subsampled.pkl
data/queries/: arxivqa_test_subsampled_queries.pkl  docvqa_test_subsampled_queries.pkl  infovqa_test_subsampled_queries.pkl  shiftproject_test_queries.pkl  syntheticDocQA_artificial_intelligence_test_queries.pkl  syntheticDocQA_energy_test_queries.pkl  syntheticDocQA_government_reports_test_queries.pkl  syntheticDocQA_healthcare_industry_test_queries.pkl  tabfquad_test_subsampled_queries.pkl  tatdqa_test_queries.pkl  tatqa_test_subsampled_queries.pkl
src/: __init__.py  client.py  config.py  data_loader.py  document_manager.py  download_datasets.py  evaluator.py
tests/: test_colivara_client.py  test_data_loader.py  test_document_manager.py  test_evaluator.py
