[project]
name = "colivara-eval"
version = "0.1.0"
description = "An evaluation of the colivara API project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colivara-py>=1.2.4",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tqdm>=4.66.5",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "datasets>=3.1.0",
    "pillow>=11.0.0",
]
